# ScratchedHologramFrom3D

./: .appveyor.yml  .gitattributes  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
ScratchedHologramFrom3DCLI/: CMakeLists.txt  main.cpp
ci/appveyor/: install.bat  set-env.bat
ci/travis/: create-deploy-tar-linux.sh  create-deploy-tar-osx.sh  install-linux.sh  install-osx.sh
include/: CAppRunner.hpp  CProjectionAnalyzer.hpp  CProjectionBuilder.hpp  CScratchProjectionAnalyzer.hpp  EWrongObjectsPosition.hpp
libs/CLITools/: CMakeLists.txt
libs/CLITools/include/: CArgsParser.hpp
libs/CLITools/source/: CArgsParser.cpp
libs/CLITools/test/: CArgsParserUnitTests.cpp  CMakeLists.txt
libs/CliTools/: CMakeLists.txt
libs/CliTools/include/: CArgsParser.hpp  COption.hpp  COptionBuilder.hpp  EOptionBuildError.hpp  EOptionNotPresentInDictionary.hpp  EParserError.hpp  ERequiredOptionNotPresent.hpp  EUnrecognizedOptionParsed.hpp  EValuedOptionWithoutValue.hpp
libs/CliTools/source/: CArgsParser.cpp  COption.cpp  COptionBuilder.cpp  EOptionBuildError.cpp  EOptionNotPresentInDictionary.cpp  EParserError.cpp  ERequiredOptionNotPresent.cpp  EUnrecognizedOptionParsed.cpp  EValuedOptionWithoutValue.cpp
libs/CliTools/test/: CArgsParserUnitTests.cpp  CMakeLists.txt  COptionCOptionBuilderUnitTests.cpp  COptionUnitTests.cpp  EOptionBuildErrorUnitTests.cpp  EOptionBuildUnitTests.cpp  EOptionNotPresentInDictionaryUnitTests.cpp  EParserErrorUnitTests.cpp  ERequiredOptionNotPresentUnitTests.cpp  EUnrecognizedOptionParsedUnitTests.cpp  EValuedOptionWithoutValueUnitTests.cpp
libs/File2DProcessingTools/: CMakeLists.txt
libs/File2DProcessingTools/include/: CPath.hpp  CSvgFileWriter.hpp  CVectorGraphicsData.hpp  EFileAlreadyExistsException.hpp  EFileCannotBeOverwritten.hpp  ENotAColorHex.hpp  IVectorGraphicsDataWriter.hpp
libs/File2DProcessingTools/source/: CPath.cpp  CSvgFileWriter.cpp  CVectorGraphicData.cpp  EFileAlreadyExistsException.cpp  EFileCannotBeOverwritten.cpp  ENotAColorHex.cpp
libs/File2DProcessingTools/test/: CMakeLists.txt  CPathUnitTests.cpp  CSvgFileWriterUnitTests.cpp  CVectorGraphicsDataUnitTests.cpp  EFileAlreadyExistsExceptionUnitTests.cpp  EFileCannotBeOverwrittenUnitTests.cpp  ENotAColorHexUnitTests.cpp
libs/File3DProcessingTools/: CMakeLists.txt
libs/File3DProcessingTools/include/: CEdge3D.hpp  CFile3DData.hpp  CLinkedEdge.hpp  CObjFileReader.hpp  CObject3DData.hpp  CPoints3DStatistics.hpp  CPolygon.hpp  CPolygon3D.hpp  EFile3DReadError.hpp  FOperators.hpp  File3DProcessingToolsTypes.hpp  IFile3DReader.hpp  TFile3DProcessingToolsTypes.hpp
libs/File3DProcessingTools/source/: CEdge3D.cpp  CFile3DData.cpp  CLinkedEdge.cpp  CObjFileReader.cpp  CObject3DData.cpp  CPoints3DStatistics.cpp  CPolygon.cpp  CPolygon3D.cpp  EFile3DReadError.cpp
libs/File3DProcessingTools/test/: CLinkedEdgeUnitTests.cpp  CMakeLists.txt  CObjFileReaderUnitTests.cpp  CObject3DDataUnitTests.cpp  CPoints3DStatisticsUnitTests.cpp  CPolygonUnitTests.cpp  EFile3DReadErrorUnitTests.cpp
libs/Geometry2D/: CMakeLists.txt
libs/Geometry2D/include/: AVector2D.hpp  CLineSegment2D.hpp  CPoint2D.hpp  CPointPlane2D.hpp  CVector2D.hpp  Geometry2DBase.hpp  Geometry2DOperators.hpp
libs/Geometry2D/source/: AVector2D.cpp  CLineSegment2D.cpp  CPoint2D.cpp  CPointPlane2D.cpp  CVector2D.cpp  Geometry2DOperators.cpp
libs/Geometry2D/test/: CLineSegment2DUnitTests.cpp  CMakeLists.txt  CPoint2DUnitTests.cpp  CVector2DUnitTests.cpp  Geometry2DOperatorsLibTests.cpp
libs/Geometry3D/: CMakeLists.txt
libs/Geometry3D/include/: AVector3D.hpp  CLinkedLine3D.hpp  CLinkedVector3D.hpp  CPoint3D.hpp  CPolygon3D.hpp  CVector3D.hpp  Geometry3DBase.hpp  Geometry3DOperators.hpp  IVector3D.hpp
libs/Geometry3D/source/: AVector3D.cpp  CLinkedLine3D.cpp  CLinkedVector3D.cpp  CPoint3D.cpp  CPolygon3D.cpp  CVector3D.cpp  Geometry3DOperators.cpp
libs/Geometry3D/test/: CLinkedLine3DUnitTests.cpp  CLinkedVector3DTests.cpp  CMakeLists.txt  CPoint3DUnitTests.cpp  CVector3DUintTests.cpp  CVector3DUnitTests.cpp  FunctionsForTests.cpp  Geometry3DOperatorsLibTests.cpp
libs/ScratchProjectionMaths/: CMakeLists.txt
libs/ScratchProjectionMaths/include/: CScratchProjectionBuilder.hpp
libs/ScratchProjectionMaths/source/: CScratchProjectionBuilder.cpp  EWrongObjectsPosition.cpp
libs/ScratchProjectionMaths/test/: CMakeLists.txt  CScratchProjectionBuilderUnitTests.cpp  EWrongObjectPositionUnitTests.cpp
source/: CAppRunner.cpp  CProjectionAnalyzer.cpp  CProjectionBuilder.cpp  CScratchProjectionAnalyzer.cpp  CScratchProjectionBuilder.cpp  main.cpp
test/: CAppRunnerUnitTests.cpp  CMakeLists.txt  CProjectionAnalyzerUnitTests.cpp  CProjectionBuilderUnitTests.cpp  CScratchProjectionAnalyzerUnitTests.cpp
